Better layout, working scans that show the text in adjustable fields -> more to do to add logic to the spinner to scan the text in the edit text and set the right value

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name="com.google.android.gms.samples.vision.ocrreader.ConfirmContactActivity"
+            android:label="Adjust fields and Save"/>
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.provider"
