Locking the screen in portrait, got the test code to work. Will try adapting the real logic to be the same and add each of the contact fields in one by one

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,13 +25,15 @@
             android:value="ocr" />
 
         <activity android:name="com.google.android.gms.samples.vision.ocrreader.StartActivity"
-            android:label="Snap Card">
+            android:label="Snap Card"
+            android:screenOrientation="sensorPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name="com.google.android.gms.samples.vision.ocrreader.ConfirmContactActivity"
+            android:screenOrientation="sensorPortrait"
             android:label="Adjust fields and Save"/>
         <provider
             android:name="android.support.v4.content.FileProvider"
