--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,14 +25,14 @@
             android:value="ocr" />
 
         <activity android:name="com.google.android.gms.samples.vision.ocrreader.StartActivity"
-            android:label="Snap Card"
+            android:label="@string/label"
             android:screenOrientation="sensorPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.google.android.gms.samples.vision.ocrreader.ConfirmContactActivity"
+        <activity android:name="com.google.android.gms.samples.vision.ocrreader.SetContactFieldsActivity"
             android:screenOrientation="sensorPortrait"
             android:label="Adjust fields and Save"/>
         <provider
