--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
         <activity android:name="com.google.android.gms.samples.vision.ocrreader.SetContactFieldsActivity"
             android:screenOrientation="sensorPortrait"
-            android:label="Adjust fields and Save"/>
+            android:label="@string/label2"/>
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.provider"
