--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mezcode.demo.roloscan.ocrreader"
+    package="com.mezcode.demo.snap2contact.ocrreader"
     android:installLocation="auto" >
 
     <uses-feature android:name="android.hardware.camera" />
@@ -24,14 +24,14 @@
             android:name="com.google.android.gms.vision.DEPENDENCIES"
             android:value="ocr" />
 
-        <activity android:name="com.mezcode.demo.roloscan.ocrreader.StartActivity"
+        <activity android:name="com.mezcode.demo.snap2contact.ocrreader.StartActivity"
             android:screenOrientation="sensorPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.mezcode.demo.roloscan.ocrreader.SetContactFieldsActivity"
+        <activity android:name="com.mezcode.demo.snap2contact.ocrreader.SetContactFieldsActivity"
             android:screenOrientation="sensorPortrait"
             android:label="@string/label2"/>
         <provider
