--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:allowBackup="true"
         android:fullBackupContent="false"
         android:hardwareAccelerated="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/appName"
         android:supportsRtl = "true"
         android:theme="@style/Theme.AppCompat" >
@@ -32,8 +32,8 @@
             </intent-filter>
         </activity>
         <activity android:name="com.mezcode.demo.roloscan.ocrreader.SetContactFieldsActivity"
-            android:screenOrientation="sensorPortrait"
-            android:label="@string/label2"/>
+            android:label="@string/label2"
+            android:screenOrientation="sensorPortrait"/>
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.provider"
