--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
     compile "com.android.support:support-v13:25.3.1"
     compile 'com.google.android.gms:play-services-vision:11.0.4'
     compile 'com.android.support:design:25.3.1'
+    compile "com.android.support:exifinterface:25.3.1"
+
 }
