--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,14 @@ android {
 }
 
 dependencies {
+    final supportlibraryVersion = '25.3.1'
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
-	compile 'com.android.support:support-v4:25.3.1'
-    compile "com.android.support:appcompat-v7:25.3.1"
-    compile "com.android.support:support-v13:25.3.1"
+	compile "com.android.support:support-v4:$supportLibraryVersion"
+    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    compile "com.android.support:support-v13:$supportLibraryVersion"
     compile 'com.google.android.gms:play-services-vision:11.0.4'
-    compile 'com.android.support:design:25.3.1'
-    compile "com.android.support:exifinterface:25.3.1"
+    compile "com.android.support:design:$supportLibraryVersion"
+    compile "com.android.support:exifinterface:$supportLibraryVersion"
 
 }
