--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.mezcode.demo.roloscan"
@@ -20,13 +20,13 @@ android {
 }
 
 dependencies {
-    final supportlibraryVersion = '25.3.1'
+    final supportLibraryVersion = '25.4.0'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 	compile "com.android.support:support-v4:$supportLibraryVersion"
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
     compile "com.android.support:support-v13:$supportLibraryVersion"
-    compile 'com.google.android.gms:play-services-vision:11.0.4'
+    compile 'com.google.android.gms:play-services-vision:11.4.2'
     compile "com.android.support:design:$supportLibraryVersion"
     compile "com.android.support:exifinterface:$supportLibraryVersion"
 
