--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
-
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "com.mezcode.demo.roloscan"
+        applicationId "com.mezcode.demo.roloscan.ocrreader"
         minSdkVersion 21
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 27
+        versionCode 2
+        versionName "1.5"
     }
     buildTypes {
         release {
@@ -17,17 +16,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    aaptOptions {
+        noCompress "tflite"
+    }
 }
 
 dependencies {
-    final supportLibraryVersion = '26.1.0'
+    final supportLibraryVersion = '27.1.1'
+    final firebaseVersion = '16.0.0'
 
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-	compile "com.android.support:support-v4:$supportLibraryVersion"
-    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
-    compile "com.android.support:support-v13:$supportLibraryVersion"
-    compile 'com.google.android.gms:play-services-vision:11.4.2'
-    compile "com.android.support:design:$supportLibraryVersion"
-    compile "com.android.support:exifinterface:$supportLibraryVersion"
-
+    implementation "com.android.support:support-v4:$supportLibraryVersion"
+    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
+    implementation "com.android.support:support-v13:$supportLibraryVersion"
+    implementation "com.android.support:design:$supportLibraryVersion"
+    implementation "com.android.support:exifinterface:$supportLibraryVersion"
+    implementation "com.google.firebase:firebase-core:$firebaseVersion"
+    implementation "com.google.firebase:firebase-ml-vision:$firebaseVersion"
 }
+apply plugin: 'com.google.gms.google-services'
