--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,25 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
     buildToolsVersion '29.0.2'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    // For Kotlin projects
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 
     defaultConfig {
         applicationId "com.mezcode.demo.roloscan.ocrreader"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 28
-        versionCode 2
-        versionName "1.5"
+        versionCode 3
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -20,12 +30,21 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.exifinterface:exifinterface:1.0.0'
-    implementation 'com.google.firebase:firebase-core:17.2.1'
-    implementation 'com.google.firebase:firebase-ml-vision:24.0.1'
+    implementation "androidx.fragment:fragment:1.3.0-alpha08"
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+    implementation 'com.google.android.material:material:1.2.0'
+    implementation 'androidx.exifinterface:exifinterface:1.2.0'
+    implementation 'com.google.firebase:firebase-core:17.5.0'
+    implementation 'com.google.firebase:firebase-ml-vision:24.1.0'
+    implementation "androidx.core:core-ktx:1.3.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "androidx.activity:activity-ktx:1.2.0-alpha07"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
 }
-apply plugin: 'com.google.gms.google-services'
+repositories {
+    mavenCentral()
+}
