--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-rc1'
+        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
